@@ -24,7 +24,7 @@ SYNOPSIS
       print "public key (in X509 format) is:\n",
             $rsa->get_public_key_x509_string();
 
-      $rsa_priv->use_md5_hash(); # use_sha1_hash is the default
+      $rsa_priv->use_md5_hash(); # insecure. use_sha256_hash or use_sha1_hash are the default
       $signature = $rsa_priv->sign($plaintext);
       print "Signed correctly\n" if ($rsa->verify($plaintext, $signature));
 
@@ -60,7 +60,7 @@ Class Methods
         private/public key pair. The first (mandatory) argument is the key
         size, while the second optional argument specifies the public
         exponent (the default public exponent is 65537). The padding is set
-        to PKCS1_OAEP, but can be changed with use_xxx_padding methods.
+        to "PKCS1_OAEP", but can be changed with use_xxx_padding methods.
 
     new_key_from_parameters
         Given Crypt::OpenSSL::Bignum objects for n, e, and optionally d, p,
@@ -130,30 +130,39 @@ Instance Methods
         mode of padding.
 
     use_pkcs1_oaep_padding
-        Use EME-OAEP padding as defined in PKCS #1 v2.0 with SHA-1, MGF1 and
-        an empty encoding parameter. This mode of padding is recommended for
-        all new applications. It is the default mode used by
+        Use "EME-OAEP" padding as defined in PKCS #1 v2.0 with SHA-1, MGF1
+        and an empty encoding parameter. This mode of padding is recommended
+        for all new applications. It is the default mode used by
         Crypt::OpenSSL::RSA.
 
     use_sslv23_padding
-        Use PKCS #1 v1.5 padding with an SSL-specific modification that
+        Use "PKCS #1 v1.5" padding with an SSL-specific modification that
         denotes that the server is SSL3 capable.
 
     use_md5_hash
         Use the RFC 1321 MD5 hashing algorithm by Ron Rivest when signing
         and verifying messages.
 
+        Note that this is considered insecure.
+
     use_sha1_hash
         Use the RFC 3174 Secure Hashing Algorithm (FIPS 180-1) when signing
-        and verifying messages. This is the default.
+        and verifying messages. This is the default, when use_sha256_hash is
+        not available.
 
     use_sha224_hash, use_sha256_hash, use_sha384_hash, use_sha512_hash
         These FIPS 180-2 hash algorithms, for use when signing and verifying
         messages, are only available with newer openssl versions (>= 0.9.8).
 
+        use_sha256_hash is the default hash mode when available.
+
     use_ripemd160_hash
         Dobbertin, Bosselaers and Preneel's RIPEMD hashing algorithm when
         signing and verifying messages.
+
+    use_whirlpool_hash
+        Vincent Rijmen und Paulo S. L. M. Barreto ISO/IEC 10118-3:2004
+        WHIRLPOOL hashing algorithm when signing and verifying messages.
 
     size
         Returns the size, in bytes, of the key. All encrypted text will be
